src/objects/Drawdown_Payment_Allocation__c.object
<CustomObject>
    <description>All Payment allocations to Drawdowns.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>Amount of Transaction (negative for payments)</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Before_Temp_Payout_Date__c</fullName>
        <formula>Transaction_Date__c &lt;=Temp_Payout_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates this transaction was recorded before the temp payout date and therefore can be included in the rollup. 
 Used in DLRS for filtering the &quot;*b4 Temp Date&quot; rollups.</inlineHelpText>
        <label>Before Temp Payout Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drawdown__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Drawdown that this applies to</inlineHelpText>
        <label>Drawdown</label>
        <referenceTo>Drawdown__c</referenceTo>
        <relationshipLabel>Payments Allocated to this Drawdown</relationshipLabel>
        <relationshipName>Payments_Allocated_to_this_Drawdown</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interest_Accrued_to_Transaction_Date__c</fullName>
        <inlineHelpText>Interest Accrued to the date of the Payment</inlineHelpText>
        <label>Interest Accrued to Transaction Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_End_Date__c</fullName>
        <inlineHelpText>The date interest was accrued to when this Payment Allocation was created.</inlineHelpText>
        <label>Interest End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Opportunity the parent Drawdown is linked to.   This is required to allow efficient replication down from Opportunity.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Drawdown Payment Allocations</relationshipLabel>
        <relationshipName>Drawdown_Payment_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <inlineHelpText>Payment associated with this Drawdown</inlineHelpText>
        <label>Payment</label>
        <referenceTo>Drawdown__c</referenceTo>
        <relationshipLabel>Drawdowns Allocated to this Payment</relationshipLabel>
        <relationshipName>Drawdowns_Allocated_to_this_Payment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payout_Date__c</fullName>
        <inlineHelpText>The Payout Date replicated down from the Opportunity.  It&apos;s required hear for the DLRS to trigger aggregation.</inlineHelpText>
        <label>Payout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Temp_Payout_Date__c</fullName>
        <inlineHelpText>The Temp Payout Date replicated down from the Opportunity.  It&apos;s required here to allow the DLRS to aggregate up to Drawdown.</inlineHelpText>
        <label>Temp Payout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <inlineHelpText>Date of Transaction</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <label>Drawdown Payment Allocation</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drawdown Payment Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_Payment</fullName>
        <active>true</active>
        <errorConditionFormula>AND(not(isNew()),isChanged(Payment__c))</errorConditionFormula>
        <errorMessage>Payment Allocation cannot be moved to a different Payment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Transaction_Date_Required</fullName>
        <active>true</active>
        <description>Just ensuring a basic field is filled.</description>
        <errorConditionFormula>ISBLANK(Transaction_Date__c)</errorConditionFormula>
        <errorMessage>Transaction Date is required</errorMessage>
    </validationRules>
</CustomObject>